--- a/contato/style.css
+++ b/contato/style.css
@@ -111,6 +111,18 @@ label:hover{
     left: 105px;
 }
 
+#tamanho > a > img{
+    padding: 30px;
+    width: 100px;
+}
+
+
+article{
+    position: absolute;
+    top: 30px;
+    left: 105px;
+}
+
 @media screen and (max-width: 600px){
     .mobile{
         display: block;
