--- a/projetos/style.css
+++ b/projetos/style.css
@@ -24,15 +24,7 @@ a {
 
 /* Header */ 
 
-#header{
-    position: fixed;
-    background-color: var(--secundaria-bg);
-    height: 100%;
-    width: 100px;
-    left: -200px;
 
-    box-shadow: 0px -3px 3px var(--principal-bg)
-}
 
 li > a{
     font-size: 20px;
@@ -95,6 +87,70 @@ label:hover{
 
     height: max-content;
     width: 100%;
+}
+
+
+#header{
+    position: fixed;
+    background-color: var(--secundaria-bg);
+    height: 100%;
+    width: 100px;
+    left: -200px;
+
+    box-shadow: 0px -3px 3px var(--principal-bg)
+}
+
+li > a{
+    font-size: 20px;
+    text-align: center;
+    padding: 20px 5px;
+    display: block;
+    color: white;
+}
+
+.mobile{
+    display: none;
+}
+
+li > a:hover{
+    background-color: var(--principal-bg);
+    text-align: center;
+    font-size: 22px;
+    color: black;
+}
+
+ul{
+    position: relative;
+    top: 80px;
+    list-style: none;
+}
+
+input[type="checkbox"]{
+    display: none;
+}
+
+input[type="checkbox"]:checked ~ #header{
+    transform: translateX(200px);
+}
+
+#img_menu{
+    border-radius: 0px 10px 10px 0px;
+    padding: 10px;
+    width: 60px;
+}
+
+label {
+    width: 100px;
+    position: absolute;
+    z-index: 1;
+}
+
+label:hover{
+    width: 95px;
+    border: 2px rgb(117, 117, 122) dashed;
+}
+#img_menu:hover{
+    background-color: transparent;
 }
 
 .mobile{
